@@ -106,6 +106,39 @@ def isIDAutoGenerated(context, id):
 
     return False
 
+
+def isExpired(content):
+    """ Find out if the object is expired (copied from skin script) """
+
+    expiry = None
+
+    # NOTE: We also accept catalog brains as 'content' so that the catalog-based
+    # folder_contents will work. It's a little magic, but it works.
+
+    # ExpirationDate should have an ISO date string, which we need to
+    # convert to a DateTime
+
+    # Try DC accessor first
+    if base_hasattr(content, 'ExpirationDate'):
+        expiry=content.ExpirationDate
+
+    # Try the direct way
+    if not expiry and base_hasattr(content, 'expires'):
+        expiry=content.expires
+
+    # See if we have a callable
+    if safe_callable(expiry):
+        expiry = expiry()
+
+    # Convert to DateTime if necessary, ExpirationDate may return 'None'
+    if expiry and expiry != 'None' and isinstance(expiry, basestring):
+        expiry = DateTime(expiry)
+
+    if isinstance(expiry, DateTime) and expiry.isPast():
+        return 1
+    return 0
+
+
 def pretty_title_or_id(context, obj, empty_value=_marker):
     """Return the best possible title or id of an item, regardless
        of whether obj is a catalog brain or an object, but returning an
